# plexbud

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
src/plexbud/: __main__.py  config.py  domain_types.py  interfaces.py  main.py  mock.py  models.py  output.py  tui.py
src/plexbud/clients/: base.py  qbittorrent.py  radarr.py  sonarr.py  tautulli.py
src/plexbud/commands/: _shared.py  delete.py  stats.py
src/plexbud/services/: deletion.py  disk.py  hardlinks.py  stats.py
tests/: conftest.py  test_tui.py
tests/fixtures/qbittorrent/: torrents.json
tests/fixtures/radarr/: movies.json
tests/fixtures/sonarr/: series.json
tests/fixtures/tautulli/: last_watched.json  library_1.json  library_2.json  watch_stats.json
tests/test_cli/: test_commands.py
tests/test_clients/: test_qbittorrent.py  test_radarr.py  test_sonarr.py  test_tautulli.py
tests/test_services/: test_deletion.py  test_disk.py  test_hardlinks.py  test_stats.py
