[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plexbud"
version = "0.1.0"
description = "CLI tool for Plex media library stats and cleanup"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "rich>=13",
    "httpx>=0.28",
    "textual>=1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[project.scripts]
plexbud = "plexbud.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/plexbud"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
strict = true
python_version = "3.13"
mypy_path = "src"
packages = ["plexbud"]
